[package]
name = "retrospective_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde.workspace = true
retrospective_logic = {path = "../retrospective_logic"}
env_logger = "0.11.8"
log = "0.4.27"
chrono = {version = "0.4.41", features = ["default", "clock"] }
retrospective_api = {path = "../retrospective_api"}
dotenv = "0.15.0"
serde_json.workspace = true
tokio.workspace = true